# Trello-metrics

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  ANALISE_COMPLETA_PROJETO.md  AUDITORIA_METRICAS.md  Dockerfile  GUIA_ATUALIZACAO_METRICAS.md  IMPACT_BASELINE.md  README.md  RELATORIO_MUDANCAS_NAO_COMMITADAS.md  desc_dump.txt  docker-compose.yml  pyproject.toml  requirements.txt
backend/: manage.py
backend/intgest_reports/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
backend/reports/: apps.py  models.py  serializers.py  urls.py
backend/reports/clients/: ai_client.py  trello_client.py
backend/reports/migrations/: 0001_initial.py  (+5 more)
client/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
client/src/: App.tsx  styles.css
docker/: Caddyfile  entrypoint.sh  nginx.conf
docs/: deploy_vps.md  guia_nivelacao_tarefas.md  sistema_metricas_trello.md  sla_medicacao_e_niveis.md
scripts/: deploy.sh
tests/: test_ai_analysis.py  test_by_system_report.py  test_metrics.py
trello_metrics/: __init__.py  cli.py  config.py  trello_client.py
trello_metrics/domain/: models.py  workflow.py
trello_metrics/metrics/: engine.py  report_filter.py  timeline.py
trello_metrics/parsers/: __init__.py  description_parser.py  export_loader.py
trello_metrics/reports/: charts.py  html_report.py  metric_definitions.json  metric_definitions.py  pdf_report.py  report_layouts.py
trello_metrics/resources/: metric_definitions.json  workflow.json
trello_metrics/utils/: business_hours.py  dates.py  fibonacci.py  period.py  text.py  work_calendar.py
(+62 files in other folders)
